# Chatgpt-MCP

./: .env  .env.example  README copy.md  README.md  main.py  poke.py  pyproject.toml  weather.py
mcp-client-python/: README.md  client.py  pyproject.toml
weather-server-python/: README.md
