[project]
name = "weather-mcp-server"
version = "0.1.0"
description = "Weather MCP server for NWS alerts and forecasts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx==0.28.1",
  "mcp[cli]==1.27.2",
]

[project.scripts]
weather-mcp = "weather:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
